--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Gustavo Javier Speranza"
-resume_title:                   "Cybersecurity Architect, Engineer and Delivery Manager"
+resume_title:                   "Cybersecurity & Transformational Manager"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "gustavosj.js@gmail.com"
