--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # Kimberly-Clark
 - company: Kimberly-Clark
-  position: Cybersecurity Architect, Engineering & Delivery Manager
+  position: Cybersecurity Architect, Engineer & Delivery Manager
   duration: Aug, 2018 &mdash; Present
   summary: Leader of Cybersecurity Architects, Engineers & Delivery Team in Kimberly-Clark. <ul class="resume-item-list"><li>Information security governance and management</li><li>Security Programs leader</li><li>Budget Planning</li><li>Act as SME for technology and business</li><li>Analysis of known and emerging threats to determine risks against assets</li><li>Creation, governance and communication of security policies and standards</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Risk Analysis in complex environments</li><li>Development, coaching, recruiting, training and retaining staff</li></ul>
 
