--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         ""
 resume_header_contact_info:     ""
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>CyberSecurity Professional with more than 15+ years of experience. Team and Transformational leader. <br>https://gussj.github.io/</p>"
+resume_header_intro: "<p>CyberSecurity Professional with more than 15+ years of experience. Team and Transformational leader. <br><br> <a href="https://gussj.github.io/">https://gussj.github.io</a></p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
