--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,7 @@
 - degree: Bachelor in Cybersecurity
   uni: Universidad de Palermo
   year: 2022 &mdash; 2025
-  award: In-Progress
+  award: In Progress
   summary: Cybersecurity Bachelor
   
 - degree: Tecnicatura Superior en Soporte de Infraestructuras
