--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
 # Jobs
 # Kimberly-Clark
 - company: Kimberly-Clark
-  position: Global Cybersecurity Architect, Engineer & Delivery Manager
+  position: Global Cybersecurity Architect, Engineer & Technology Risk Manager
   duration: Aug, 2018 &mdash; Present
-  summary: Leader of Cybersecurity Architects, Engineers & Delivery Team in Kimberly-Clark. <ul class="resume-item-list"><li>Information security governance and management</li><li>Security Programs leader</li><li>Budget Planning</li><li>Act as SME for technology and business</li><li>Analysis of known and emerging threats to determine risks against assets</li><li>Creation, governance and communication of security policies and standards</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Risk Analysis in complex environments</li><li>Development, coaching, recruiting, training and retaining staff</li></ul>
+  summary: Leader of Global Cybersecurity Architects, Engineers & Technology Risk Team in Kimberly-Clark. <ul class="resume-item-list"><li>Information security governance and management</li><li>Security Programs leader</li><li>Budget Planning</li><li>Act as SME for technology and business</li><li>Analysis of known and emerging threats to determine risks against assets</li><li>Creation, governance and communication of security policies and standards</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Risk Analysis in complex environments</li><li>Development, coaching, recruiting, training and retaining staff</li></ul>
 
 # Security Manager
 - company: KPMG Argentina
