--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,8 +1,14 @@
 # Jobs
+# Disney
+- company: The Walt Disney Company
+  position: Sr. Manager, LATAM Information Security Officer
+  duration: Jun, 2022 &mdash; Present
+  summary: Responsible for extending and localizing the enterprise security program in the LATAM region, and act as a subject matter leader for regional technology and business teams. <ul class="resume-item-list"><li>Analysis of known and emerging threats to determine risks against TWDC assets</li><li>Security Programs leader</li><li>Creation, maintenance, governance and communication of security policies and standards across TWDC</li><li>Act as SME for technology and business</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Creation, governance and communication of security policies and standards</li><li>Assurance that TWDC assets are effectively managed and monitored to meet TWDC security criteria</li><li>Risk Analysis in complex environments</li></ul>
+  
 # Kimberly-Clark
 - company: Kimberly-Clark
   position: Global Cybersecurity Architect, Engineer & Technology Risk Manager
-  duration: Aug, 2018 &mdash; Present
+  duration: Aug, 2018 &mdash; Jun, 2022
   summary: Leader of Global Cybersecurity Architects, Engineers & Technology Risk Team in Kimberly-Clark. <ul class="resume-item-list"><li>Information security governance and management</li><li>Security Programs leader</li><li>Budget Planning</li><li>Act as SME for technology and business</li><li>Analysis of known and emerging threats to determine risks against assets</li><li>Creation, governance and communication of security policies and standards</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Risk Analysis in complex environments</li><li>Development, coaching, recruiting, training and retaining staff</li></ul>
 
 # Security Manager
