--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,8 +3,8 @@
 - company: The Walt Disney Company
   position: Sr. Manager, LATAM Information Security Officer
   duration: Jun, 2022 &mdash; Present
-  summary: Responsible for extending and localizing the enterprise security program in the LATAM region, and act as a subject matter leader for regional technology and business teams. <ul class="resume-item-list"><li>Analysis of known and emerging threats to determine risks against TWDC assets</li><li>Security Programs leader</li><li>Creation, maintenance, governance and communication of security policies and standards across TWDC</li><li>Act as SME for technology and business</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Creation, governance and communication of security policies and standards</li><li>Assurance that TWDC assets are effectively managed and monitored to meet TWDC security criteria</li><li>Risk Analysis in complex environments</li></ul>
-  
+  summary: Responsible for extending and localizing the enterprise security program in the LATAM region, and act as a subject matter leader for regional technology and business teams. <ul class="resume-item-list"><li>Analysis of known and emerging threats to determine risks against TWDC assets</li><li>Security Programs leader</li><li>Creation, maintenance, governance and communication of security policies and standards across TWDC</li><li>Act as SME for technology and business</li><li>Assessment and audit of compliance against the security policies and standards</li><li>Overseeing control assurance, monitoring, and remediation</li><li>Assurance that TWDC assets are effectively managed and monitored to meet TWDC security criteria</li><li>Managing information security risk</li><li>Ensuring alignement with legal and regulatory requirements</li><li>Delivering information security awareness, education, and training</li><li>Publishing the status of Corporate’s information security posture</li></ul>
+
 # Kimberly-Clark
 - company: Kimberly-Clark
   position: Global Cybersecurity Architect, Engineer & Technology Risk Manager
